--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^3.1.3",
     "astro": "^2.6.0",
+    "gsap": "^3.11.5",
     "tailwindcss": "^3.3.2"
   }
 }
