--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://bora-sen.github.io",
   "name": "retro-donut-website",
   "type": "module",
   "version": "0.0.1",
@@ -7,12 +8,17 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build"
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.1.3",
     "astro": "^2.6.0",
     "gsap": "^3.11.5",
     "tailwindcss": "^3.3.2"
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
